Whole lotta new stuff

--- a/about.html
+++ b/about.html
@@ -1,27 +1,4 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>About</title>
-  <link rel="stylesheet" href="css/style.css" />
-</head>
-<body>
-  <header>
-    <div class="nav">
-      <span class="name">sammy duggasani</span>
-      <nav>
-        <a href="data.html">data</a>
-        <a href="photo.html">photo</a>
-        <a href="thoughts.html">thoughts</a>
-        <a href="about.html">about</a>
-      </nav>
-    </div>
-  </header>
-  <main>
-    <h1>About</h1>
-    <p>I'm Sammy Duggasani, a data scientist, photographer, and writer. This is where I share my work and thoughts.</p>
-    <p>Contact: sammy@example.com</p>
-  </main>
-</body>
-</html>
+<section class="under-construction">
+  <p>still building this!</p>
+</section>
