--- a/index.html
+++ b/index.html
@@ -3,24 +3,15 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Sammy Duggasani</title>
+  <title>SAMIR</title>
   <link rel="stylesheet" href="css/style.css" />
 </head>
-<body>
-  <header>
-    <div class="nav">
-      <span class="name">sammy duggasani</span>
-      <nav>
-        <a href="data.html">data</a>
-        <a href="photo.html">photo</a>
-        <a href="thoughts.html">thoughts</a>
-        <a href="about.html">about</a>
-      </nav>
-    </div>
-  </header>
-  <main>
-    <h1>Welcome</h1>
-    <p>This is the portfolio site of Sammy Duggasani. Explore my work across data, visuals, and written thought.</p>
-  </main>
+<body class="scanner-landing">
+  <a href="home.html" class="scanner-name">
+    <span>SAMIR</span>
+    <div class="scanline"></div>
+  </a>
 </body>
 </html>
+
+
