--- a/data.html
+++ b/data.html
@@ -1,26 +1,4 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Data Projects</title>
-  <link rel="stylesheet" href="css/style.css" />
-</head>
-<body>
-  <header>
-    <div class="nav">
-      <span class="name">sammy duggasani</span>
-      <nav>
-        <a href="data.html">data</a>
-        <a href="photo.html">photo</a>
-        <a href="thoughts.html">thoughts</a>
-        <a href="about.html">about</a>
-      </nav>
-    </div>
-  </header>
-  <main>
-    <h1>Data Projects</h1>
-    <p>Coming soon: visualizations, forecasts, and analyses.</p>
-  </main>
-</body>
-</html>
+<section class="under-construction">
+  <p>still building this!</p>
+</section>
