--- a/photo.html
+++ b/photo.html
@@ -3,8 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Photos</title>
+  <title>SAMIR</title>
   <link rel="stylesheet" href="css/style.css" />
+  <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
+  <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
   <style>
     body {
       margin: 0;
@@ -20,7 +22,7 @@
       font-family: 'SamirFont';
       font-size: 3rem;
       text-decoration: none;
-      color: black;
+      color: white;
       z-index: 999;
       text-transform: uppercase;
     }
@@ -62,48 +64,28 @@
   <a href="index.html" class="top-left-link">samir</a>
 
   <div class="photo-scroll-container">
-    <div class="photo-slide">
-      <img src="photos/BZN1.jpg" alt="BZN1">
-    </div>
-    <div class="photo-slide">
-      <img src="photos/BZN2.jpg" alt="BZN2">
-    </div>
-    <div class="photo-slide">
-      <img src="photos/CDMX1.jpg" alt="CDMX1">
-    </div>
-    <div class="photo-slide">
-      <img src="photos/CDMX2.jpg" alt="CDMX2">
-    </div>
-    <div class="photo-slide">
-      <img src="photos/CDMX3.jpg" alt="CDMX3">
-    </div>
-    <div class="photo-slide">
-      <img src="photos/CDMX4.jpg" alt="CDMX4">
-    </div>
-    <div class="photo-slide">
-      <img src="photos/HYD1.jpg" alt="HYD1">
-    </div>
-    <div class="photo-slide">
-      <img src="photos/HYD2.jpg" alt="HYD2">
-    </div>
-    <div class="photo-slide">
-      <img src="photos/HYD3.jpg" alt="HYD3">
-    </div>
-    <div class="photo-slide">
-      <img src="photos/HYD4.jpg" alt="HYD4">
-    </div>
-    <div class="photo-slide">
-      <img src="photos/HYD5.jpg" alt="HYD5">
-    </div>
-    <div class="photo-slide">
-      <img src="photos/HYD6.jpg" alt="HYD6">
-    </div>
-    <div class="photo-slide">
-      <img src="photos/SF1.jpg" alt="SF1">
-    </div>
-    <div class="photo-slide">
-      <img src="photos/CMB1.jpg" alt="CMB1">
-    </div>
+  <div class="photo-slide"><img src="photos/SL1.jpg" alt="SL1"></div>
+  <div class="photo-slide"><img src="photos/BZN1.jpg" alt="BZN1"></div>
+  <div class="photo-slide"><img src="photos/HYD1.jpg" alt="HYD1"></div>
+  <div class="photo-slide"><img src="photos/BZN2.jpg" alt="BZN2"></div>
+  <div class="photo-slide"><img src="photos/HYD3.jpg" alt="HYD3"></div>
+  <div class="photo-slide"><img src="photos/SL4.JPG" alt="SL4"></div>
+  <div class="photo-slide"><img src="photos/HYD4.jpg" alt="HYD4"></div>
+  <div class="photo-slide"><img src="photos/CDMX1.jpg" alt="CDMX1"></div>
+  <div class="photo-slide"><img src="photos/SL5.jpg" alt="SL5"></div>
+  <div class="photo-slide"><img src="photos/HYD6.jpg" alt="HYD6"></div>
+  <div class="photo-slide"><img src="photos/SL6.jpg" alt="SL6"></div>
+  <div class="photo-slide"><img src="photos/HYD2.jpg" alt="HYD2"></div>
+  <div class="photo-slide"><img src="photos/SL2.jpg" alt="SL2"></div>
+  <div class="photo-slide"><img src="photos/CDMX3.jpg" alt="CDMX3"></div>
+  <div class="photo-slide"><img src="photos/SL3.jpg" alt="SL3"></div>
+  <div class="photo-slide"><img src="photos/CDMX2.jpg" alt="CDMX2"></div>
+  <div class="photo-slide"><img src="photos/HYD5.jpg" alt="HYD5"></div>
+  <div class="photo-slide"><img src="photos/HYD7.jpg" alt="HYD7"></div>
+  <div class="photo-slide"><img src="photos/SF1.jpg" alt="SF1"></div>
+  <div class="photo-slide"><img src="photos/SF2.jpg" alt="SF2"></div>
+  <div class="photo-slide"><img src="photos/ATL1.jpg" alt="ATL1"></div>
+  <div class="photo-slide"><img src="photos/CMB1.jpg" alt="CMB1"></div>
   </div>
 </body>
 
