About Page Skeleton

--- a/about.html
+++ b/about.html
@@ -1,4 +1,69 @@
 <!DOCTYPE html>
-<section class="under-construction">
-  <p>still building this!</p>
-</section>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>About – SAMIR</title>
+  <link rel="stylesheet" href="css/style.css" />
+  <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
+  <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
+  <style>
+    .about-container {
+      max-width: 700px;
+      margin: 100px auto;
+      padding: 20px;
+      font-family: var(--font-tertiary);
+      color: white;
+      line-height: 1.6;
+    }
+
+    .about-container h1 {
+      font-size: 2.5rem;
+      margin-bottom: 1rem;
+      font-family: var(--font-secondary);
+    }
+
+    .about-container a {
+      color: white;
+      text-decoration: underline;
+    }
+
+    /* Reuse the exact top-left-link style from photo.html */
+    .top-left-link {
+      position: fixed;
+      top: 20px;
+      left: 20px;
+      font-family: 'SamirFont';
+      font-size: 3rem;
+      text-decoration: none;
+      color: white;
+      z-index: 999;
+      text-transform: uppercase;
+    }
+  </style>
+</head>
+<body class="about-page">
+  <!-- Logo in top-left corner -->
+  <a href="index.html" class="top-left-link">samir</a>
+
+  <!-- About Section Content -->
+  <div class="about-container">
+    <h1>Samir "Sammy" Duggasani</h1>
+    <p></p>
+    <p>x</p>
+    <p>x</p>
+
+    <br />
+
+    <p><strong>Contact:</strong><br />sduggasani@gmail.com</p>
+
+    <p><strong>Tools:</strong><br />
+    x</p>
+
+    <p>x</p>
+
+    <p><a href="documents/Resume.pdf">Resume</a></p>
+  </div>
+</body>
+</html>
+
