--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
 
 </head>
-<body class="scanner-landing">
+<body class="scanner-landing" onclick="window.location.href='home.html'">
   <a href="home.html" class="scanner-name">
     <span>SAMIR</span>
   </a>
