--- a/about.html
+++ b/about.html
@@ -50,17 +50,13 @@
   <div class="about-container">
     <h1>Samir "Sammy" Duggasani</h1>
     <p></p>
-    <p>x</p>
-    <p>x</p>
-
-    <br />
+    <p>I think I know what I'm doing.</p>
+    <p>Data journalism and casual photography.</p>
 
     <p><strong>Contact:</strong><br />sduggasani@gmail.com</p>
 
     <p><strong>Tools:</strong><br />
-    x</p>
-
-    <p>x</p>
+    Python, R, Minolta X-700, Minolta SRT-100</p>
 
     <p><a href="documents/Resume.pdf">Resume</a></p>
   </div>
