--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
     <p>Data journalism and casual photography.</p>
 
     <p><strong>Contact:</strong><br />sduggasani@gmail.com</p>
-    <p>Talk to me in English, Spanish, or Telugu.</p>
+    <p>Talk to me in English, Spanish, or</p>
 
     <p><strong>Tools:</strong><br />
     Python, R, Minolta X-700, Minolta SRT-100</p>
