--- a/photo.html
+++ b/photo.html
@@ -15,23 +15,25 @@
       font-family: 'Inter', sans-serif;
     }
 
+    /* Click zones */
     .scroll-zone {
       position: fixed;
       top: 0;
       width: 50vw;
       height: 100vh;
       z-index: 10;
+      pointer-events: none; /* Don’t block other elements */
+    }
+    .scroll-zone .zone-click {
+      width: 100%;
+      height: 100%;
+      pointer-events: auto; /* Only this child is clickable */
       cursor: pointer;
     }
+    .left-zone { left: 0; }
+    .right-zone { right: 0; }
 
-    .left-zone {
-      left: 0;
-    }
-
-    .right-zone {
-      right: 0;
-    }
-
+    /* Top-left home link */
     .top-left-link {
       position: fixed;
       top: 20px;
@@ -44,6 +46,7 @@
       text-transform: uppercase;
     }
 
+    /* Photo scroll container */
     .photo-scroll-container {
       display: flex;
       flex-direction: row;
@@ -54,14 +57,10 @@
       height: 100vh;
       -webkit-overflow-scrolling: touch;
       scroll-behavior: smooth;
-
-      scrollbar-width: none;         /* Firefox */
+      scrollbar-width: none;
       -ms-overflow-style: none;
     }
-
-    .photo-scroll-container::-webkit-scrollbar {
-      display: none;                 /* Chrome, Safari, Opera */
-    }
+    .photo-scroll-container::-webkit-scrollbar { display: none; }
 
     .photo-slide {
       flex: none;
@@ -76,7 +75,6 @@
       box-sizing: border-box;
       overflow: hidden;
     }
-
     .photo-slide img {
       max-width: 90%;
       max-height: 90%;
@@ -85,6 +83,7 @@
       display: block;
     }
 
+    /* Arrows */
     .bottom-right-arrows {
       position: fixed;
       bottom: 30px;
@@ -93,9 +92,8 @@
       display: flex;
       gap: 12px;
     }
-
     .arrow-btn {
-      font-family: 'SecondaryFont', monospace; /* pixel font */
+      font-family: 'SecondaryFont', monospace;
       font-size: 2rem;
       color: white;
       background: rgba(0, 0, 0, 0.4);
@@ -105,99 +103,103 @@
       user-select: none;
       transition: background 0.2s ease, transform 0.2s ease;
     }
-
     .arrow-btn:hover {
       background: rgba(255, 255, 255, 0.85);
       color: black;
-      trans form: scale(1.1);
+      transform: scale(1.1);
     }
-          }
   </style>
 </head>
 <body class="photo-page">
+
   <a href="index.html" class="top-left-link">samir</a>
-  <div class="scroll-zone left-zone"></div>
-  <div class="scroll-zone right-zone"></div>
-  <div class="photo-scroll-container">
-  <div class="bottom-right-arrows">
-    <span class="arrow-btn left-btn">&lt;</span>
-    <span class="arrow-btn right-btn">&gt;</span>
+
+  <!-- Click zones (safe for arrows now) -->
+  <div class="scroll-zone left-zone">
+    <div class="zone-click" id="zone-left"></div>
   </div>
-  <div class="photo-slide"><img src="photos/SL1.jpg" alt="SL1"></div>
-  <div class="photo-slide"><img src="photos/BZN1.jpg" alt="BZN1"></div>
-  <div class="photo-slide"><img src="photos/HYD1.jpg" alt="HYD1"></div>
-  <div class="photo-slide"><img src="photos/BZN2.jpg" alt="BZN2"></div>
-  <div class="photo-slide"><img src="photos/HYD3.jpg" alt="HYD3"></div>
-  <div class="photo-slide"><img src="photos/SL4.JPG" alt="SL4"></div>
-  <div class="photo-slide"><img src="photos/HYD4.jpg" alt="HYD4"></div>
-  <div class="photo-slide"><img src="photos/CDMX1.jpg" alt="CDMX1"></div>
-  <div class="photo-slide"><img src="photos/SL5.jpg" alt="SL5"></div>
-  <div class="photo-slide"><img src="photos/HYD6.jpg" alt="HYD6"></div>
-  <div class="photo-slide"><img src="photos/SL6.jpg" alt="SL6"></div>
-  <div class="photo-slide"><img src="photos/HYD2.jpg" alt="HYD2"></div>
-  <div class="photo-slide"><img src="photos/SL2.jpg" alt="SL2"></div>
-  <div class="photo-slide"><img src="photos/CDMX3.jpg" alt="CDMX3"></div>
-  <div class="photo-slide"><img src="photos/SL3.jpg" alt="SL3"></div>
-  <div class="photo-slide"><img src="photos/CDMX2.jpg" alt="CDMX2"></div>
-  <div class="photo-slide"><img src="photos/HYD5.jpg" alt="HYD5"></div>
-  <div class="photo-slide"><img src="photos/HYD7.jpg" alt="HYD7"></div>
-  <div class="photo-slide"><img src="photos/SF1.jpg" alt="SF1"></div>
-  <div class="photo-slide"><img src="photos/SF2.jpg" alt="SF2"></div>
-  <div class="photo-slide"><img src="photos/ATL1.jpg" alt="ATL1"></div>
-  <div class="photo-slide"><img src="photos/CMB1.jpg" alt="CMB1"></div>
+  <div class="scroll-zone right-zone">
+    <div class="zone-click" id="zone-right"></div>
   </div>
+
+  <!-- Photo gallery -->
+  <div class="photo-scroll-container" id="photo-container">
+    <div class="bottom-right-arrows">
+      <span class="arrow-btn left-btn">&lt;</span>
+      <span class="arrow-btn right-btn">&gt;</span>
+    </div>
+
+    <div class="photo-slide"><img src="photos/SL1.jpg" alt="SL1"></div>
+    <div class="photo-slide"><img src="photos/BZN1.jpg" alt="BZN1"></div>
+    <div class="photo-slide"><img src="photos/HYD1.jpg" alt="HYD1"></div>
+    <div class="photo-slide"><img src="photos/BZN2.jpg" alt="BZN2"></div>
+    <div class="photo-slide"><img src="photos/HYD3.jpg" alt="HYD3"></div>
+    <div class="photo-slide"><img src="photos/SL4.JPG" alt="SL4"></div>
+    <div class="photo-slide"><img src="photos/HYD4.jpg" alt="HYD4"></div>
+    <div class="photo-slide"><img src="photos/CDMX1.jpg" alt="CDMX1"></div>
+    <div class="photo-slide"><img src="photos/SL5.jpg" alt="SL5"></div>
+    <div class="photo-slide"><img src="photos/HYD6.jpg" alt="HYD6"></div>
+    <div class="photo-slide"><img src="photos/SL6.jpg" alt="SL6"></div>
+    <div class="photo-slide"><img src="photos/HYD2.jpg" alt="HYD2"></div>
+    <div class="photo-slide"><img src="photos/SL2.jpg" alt="SL2"></div>
+    <div class="photo-slide"><img src="photos/CDMX3.jpg" alt="CDMX3"></div>
+    <div class="photo-slide"><img src="photos/SL3.jpg" alt="SL3"></div>
+    <div class="photo-slide"><img src="photos/CDMX2.jpg" alt="CDMX2"></div>
+    <div class="photo-slide"><img src="photos/HYD5.jpg" alt="HYD5"></div>
+    <div class="photo-slide"><img src="photos/HYD7.jpg" alt="HYD7"></div>
+    <div class="photo-slide"><img src="photos/SF1.jpg" alt="SF1"></div>
+    <div class="photo-slide"><img src="photos/SF2.jpg" alt="SF2"></div>
+    <div class="photo-slide"><img src="photos/ATL1.jpg" alt="ATL1"></div>
+    <div class="photo-slide"><img src="photos/CMB1.jpg" alt="CMB1"></div>
+  </div>
+
   <script>
-    const container = document.querySelector('.photo-scroll-container');
+    const container = document.getElementById('photo-container');
     const scrollAmount = window.innerWidth;
     const leftBtn = document.querySelector('.left-btn');
     const rightBtn = document.querySelector('.right-btn');
-  
-// Show/hide arrows based on scroll position
-  function updateArrowVisibility() {
-    const scrollLeft = container.scrollLeft;
-    const maxScrollLeft = container.scrollWidth - container.clientWidth;
+    const zoneLeft = document.getElementById('zone-left');
+    const zoneRight = document.getElementById('zone-right');
 
-    // First slide = hide left arrow
-    if (scrollLeft <= 10) {
-      leftBtn.style.display = 'none';
-    } else {
-      leftBtn.style.display = 'inline-block';
+    // Update arrow visibility
+    function updateArrowVisibility() {
+      const scrollLeft = container.scrollLeft;
+      const maxScrollLeft = container.scrollWidth - container.clientWidth;
+
+      leftBtn.style.display = (scrollLeft <= 10) ? 'none' : 'inline-block';
+      rightBtn.style.display = (scrollLeft >= maxScrollLeft - 10) ? 'none' : 'inline-block';
     }
 
-    // Last slide = hide right arrow
-    if (scrollLeft >= maxScrollLeft - 10) {
-      rightBtn.style.display = 'none';
-    } else {
-      rightBtn.style.display = 'inline-block';
-    }
-  }
-
-  // Scroll events: buttons
-  leftBtn.addEventListener('click', () => {
-    container.scrollBy({ left: -scrollAmount, behavior: 'smooth' });
-  });
-
-  rightBtn.addEventListener('click', () => {
-    container.scrollBy({ left: scrollAmount, behavior: 'smooth' });
-  });
-
-  // Scroll event: keyboard
-  document.addEventListener('keydown', (e) => {
-    if (e.key === 'ArrowRight') {
-      container.scrollBy({ left: scrollAmount, behavior: 'smooth' });
-    } else if (e.key === 'ArrowLeft') {
+    // Button clicks
+    leftBtn.addEventListener('click', () => {
       container.scrollBy({ left: -scrollAmount, behavior: 'smooth' });
-    }
-  });
+    });
+    rightBtn.addEventListener('click', () => {
+      container.scrollBy({ left: scrollAmount, behavior: 'smooth' });
+    });
 
-  // Scroll event: update arrows as user scrolls
-  container.addEventListener('scroll', updateArrowVisibility);
+    // Zone clicks
+    zoneLeft.addEventListener('click', () => {
+      container.scrollBy({ left: -scrollAmount, behavior: 'smooth' });
+    });
+    zoneRight.addEventListener('click', () => {
+      container.scrollBy({ left: scrollAmount, behavior: 'smooth' });
+    });
 
-  // Run once on load
-  updateArrowVisibility();
+    // Keyboard arrows
+    document.addEventListener('keydown', (e) => {
+      if (e.key === 'ArrowRight') container.scrollBy({ left: scrollAmount, behavior: 'smooth' });
+      if (e.key === 'ArrowLeft') container.scrollBy({ left: -scrollAmount, behavior: 'smooth' });
+    });
+
+    // On scroll update arrows
+    container.addEventListener('scroll', updateArrowVisibility);
+
+    // Init
+    updateArrowVisibility();
   </script>
 
 </body>
-
 </html>
+
 
