Fixing mobile aspect ratios

--- a/home.html
+++ b/home.html
@@ -7,13 +7,14 @@
   <link rel="stylesheet" href="css/style.css" />
   <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
   <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
-
 </head>
 <body class="home-page">
-  <main class="home-links">
-    <a href="photo.html">photos</a>
-    <a href="about.html">about</a>
-  </main>
+  <div class="vh-100 center">
+    <main class="home-links">
+      <a href="photo.html">photos</a>
+      <a href="about.html">about</a>
+    </main>
+  </div>
 </body>
 </html>
 
