--- a/home.html
+++ b/home.html
@@ -15,8 +15,17 @@
       <a href="about.html">about</a>
     </main>
   </div>
+
+  <script>
+    function setVH() {
+      document.documentElement.style.setProperty('--vh', window.innerHeight * 0.01 + 'px');
+    }
+    setVH();
+    window.addEventListener('resize', setVH);
+  </script>
 </body>
 </html>
+
 
 
 
